# ray4laz-gizmo

./: README.md
headers/: CMakeLists.txt  how-to build
package/: ray4lazgizmo.lpk  ray4lazgizmo.pas
package/backup/: ray4lazgizmo.lpk.bak
package/lib/x86_64-linux/: ray4lazgizmo.compiled  ray4lazgizmo.ppu  raygizmo.ppu
source/: raygizmo.pas
source/backup/: raygizmo.pas.bak
